--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,11 +32,26 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            storeFile file("release.keystore")   // Asegúrate de que la ruta es correcta
+            storePassword "1024467369"
+            keyAlias "tu_alias"
+            keyPassword "1024467369"
+        }
+        debug {
+            storePassword "1024467369"
+            keyAlias "tu_alias"
+            keyPassword "1024467369"
+        }
+    }
+    
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 }
