--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   google_sign_in: ^6.1.5
+  cloud_firestore: ^5.6.5
   provider: ^6.1.2
   geolocator: ^13.0.2
   geocoding: ^3.0.0
