--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   speech_to_text: ^6.1.1
+  permission_handler: ^11.0.1
   
 
   # The following adds the Cupertino Icons font to your application.
