--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,3 +4,4 @@ android.enableJetifier=true
 FLUTTER_MIN_SDK_VERSION=23
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=C:\\Program Files\\Microsoft\\jdk-17.0.14.7-hotspot
