--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,13 @@ dependencies:
   geocoding: ^3.0.0
   speech_to_text: ^6.1.1
   permission_handler: ^11.0.1
+  jiffy: ^6.3.2
   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
