--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geocoding: ^3.0.0
   speech_to_text: ^6.1.1
   permission_handler: ^11.0.1
+  intl: ^0.18.0 
   
 
   # The following adds the Cupertino Icons font to your application.
