--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   permission_handler: ^11.0.1
   jiffy: ^6.3.2
   shared_preferences: ^2.5.3
+  cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.4.1
   
 
   # The following adds the Cupertino Icons font to your application.
