--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.5.3
   cached_network_image: ^3.4.1
   flutter_cache_manager: ^3.4.1
+  connectivity_plus: ^6.1.3
   
 
   # The following adds the Cupertino Icons font to your application.
