--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.12.1
+  firebase_storage: ^12.4.4
   firebase_auth: ^5.5.1
   google_sign_in: ^6.1.5
   cloud_firestore: ^5.6.5
@@ -45,6 +46,9 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_cache_manager: ^3.4.1
   connectivity_plus: ^6.1.3
+  image_picker: ^1.0.4
+  path_provider:
+  http:
   
 
   # The following adds the Cupertino Icons font to your application.
