--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
   assets:
     - assets/BiteBackLogoNaranja.png
     - assets/google.png
+    - assets/MysteryBox.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
