--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_cache_manager: ^3.4.1
   connectivity_plus: ^6.1.3
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
   
 
   # The following adds the Cupertino Icons font to your application.
